# rust-seminar

./: Cargo.toml  README.md  doctave.yaml  getting-started.html  index.html  rust-crates.html  rust-ecosystem.html  rust-examples.html  rust-syntax.html  search_index.json
.github/workflows/: cd.yml  ci.yml
api-server/: 1-create-project.html  2-hello-tokio.html  3-basic-web-server.html  4-prepare-server-routes.html  5-cloneable-movie-repository.html  Cargo.toml  index.html
api-server/src/: main.rs  movie_repository.rs
calculator/: Cargo.toml
calculator/src/: main.rs
docs/: README.md  getting-started.md  rust-crates.md  rust-ecosystem.md  rust-examples.md  rust-maturity.md  rust-syntax.md
docs/api-server/: 1-create-project.md  2-hello-tokio.md  3-basic-web-server.md  4-prepare-server-routes.md  5-cloneable-movie-repository.md  README.md
hello-world/examples/: control_flow.rs  functions.rs  pattern_matching.rs  variables.rs
my-library/examples/add/: main.rs
my-library/src/: lib.rs
